--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -1,2 +1,17 @@
-<h1>Users#my_portfolio</h1>
-<p>Find me in app/views/users/my_portfolio.html.erb</p>
+<h1>My portfolio</h1>
+<div class="search-area">
+  <h3>Search stocks</h3>
+  <%= form_tag '#', method: :get do %>
+    <div class="form-group row">
+      <div class="col-sm-9">
+        <%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symbol", autofocus: true, class: "form-control form-control-lg" %>
+      </div>
+      <div class="col-sm-3">
+        <%= button_tag type: :submit, class: "btn btn-success" do %>
+          <i class="fa fa-search fa-2x"></i>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+</div>
+
