--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -1,7 +1,7 @@
 <h1>My portfolio</h1>
 <div class="search-area">
   <h3>Search stocks</h3>
-  <%= form_tag '#', method: :get do %>
+  <%= form_tag search_stock_path, method: :get do %>
     <div class="form-group row">
       <div class="col-sm-9">
         <%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symbol", autofocus: true, class: "form-control form-control-lg" %>
@@ -14,4 +14,11 @@
     </div>
   <% end %>
 </div>
+<% if @stock %>
+  <div class="card card-header results-block">
+    <strong>Symbol: <%= @stock.ticker %></strong>
+    <strong>Name: <%= @stock.name %></strong>
+    <strong>Price: <%= @stock.last_price %></strong>
+  </div>
+<% end %>
 
