--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -30,6 +30,9 @@
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
+          <li class='nav-item user-name'>
+          <i class="fa fa-user"></i> <%= current_user.full_name %>
+          </li>
           <li class="nav-item">
             <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-danger logout" %>
           </li>
