--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,6 +5,22 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= bootstrap_devise_error_messages! %>
 
+      <div class="form row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :first_name %>
+            <%= f.text_field :first_name, autofocus: true, autocomplete: 'first name', class: 'form-control' %>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :last_name %>
+            <%= f.text_field :last_name, autofocus: true, autocomplete: 'last name', class: 'form-control' %>
+          </div>
+        </div>
+      </div>
+
       <div class="form-group">
         <%= f.label :email %>
         <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
