--- a/app/views/users/my_friends.html.erb
+++ b/app/views/users/my_friends.html.erb
@@ -4,7 +4,7 @@
   <%= form_tag search_friends_path, remote: true, method: :get do %>
     <div class="form-group row">
       <div class="col-sm-9">
-        <%= text_field_tag :friend, params[:friend], placeholder: "Friend's name", autofocus: true, class: "form-control form-control-lg" %>
+        <%= text_field_tag :friend, params[:friend], placeholder: "Name or Email", autofocus: true, class: "form-control form-control-lg" %>
       </div>
       <div class="col-sm-3">
         <%= button_tag type: :submit, class: "btn btn-success" do %>
